<resources>
    <string name="app_name">BDSqlite</string>
    <string name="tvTitulo">Registro de usuarios</string>
    <string name="etDocumento">DOCUMENTO</string>
    <string name="etNombres">NOMBRES</string>
    <string name="etApellidos">APELLIDOS</string>
    <string name="etUsuario">USUARIO</string>
    <string name="etContra">CONTRASEÑA</string>
    <string name="btnRegistrar">REGISTRAR</string>
    <string name="btnBuscar">BUSCAR</string>
    <string name="btnListar">LISTAR</string>
    <string name="btnLimpiar">LIMPIAR</string>
    <string name="btnActualizar">ACTUALIZAR DATOS</string>
</resources>