<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.edu.uniminuto.MainActivity">


    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="4dp"
        android:textSize="24sp"
        android:text="@string/tvTitulo" />

    <EditText
        android:id="@+id/etDocumento"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/etDocumento"
        android:inputType="number" />

    <EditText
        android:id="@+id/etNombres"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/etNombres"
        android:inputType="text" />

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/etApellidos"
        android:inputType="text" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/etUsuario"
        android:inputType="text" />

    <EditText
        android:id="@+id/etContra"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/etContra"
        android:inputType="textPassword" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnRegistrar" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btnBuscar" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnListar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnListar" />

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnLimpiar" />
    </TableRow>


    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnActualizar" />

    <ListView
        android:id="@+id/lvLista"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>